--- a/5/5.10/task1.html
+++ b/5/5.10/task1.html
@@ -5,6 +5,16 @@
     <p>Before the acript...</p>
 
     <script>
+        let user = {
+            name: "John",
+            years: 30
+        };
+
+        let { name, years: age, isAdmin = false } = user;
+
+        alert(name); // John
+        alert(age); // 30
+        alert(isAdmin); // false
     </script>
 
     <p>...After the script.</p>
